--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     implementation 'io.sellmair:disposer:2.0.0'
     implementation "com.google.code.gson:gson:2.8.9"
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
 
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
